@@ -1,4 +1,5 @@
 1.0.0
+Fixed badly exported DISPLAY variable.
 Changed KKEDIT_FILE_LIST passed to tools to newline seperated list.
 Fixes for getting glib/gio etc defs in 'Search in GTK Docs'.
 Fixed ctags version not supporting depth to recurse.
